--- a/apps/nextjs/src/app/privacy-policy/page.mdx
+++ b/apps/nextjs/src/app/privacy-policy/page.mdx
@@ -4,13 +4,7 @@ export const article = {
   author: 'Adam Wathan',
   date: '2024-05-02',
   title: 'Privacy Policy for ActiveAces',
-  description:
-    'Most companies try to stay ahead of the curve when it comes to visual design, but for Planetaria we needed to create a brand that would still inspire us 100 years from now when humanity has spread across our entire solar system.',
-}
-
-export const metadata = {
-  title: article.title,
-  description: article.description,
+  description: 'The privacy policy for active aces',
 }
 
 export default (props) => <ArticleLayout article={article} {...props} />
