chore:update email

--- a/apps/nextjs/src/app/privacy-policy/page.mdx
+++ b/apps/nextjs/src/app/privacy-policy/page.mdx
@@ -53,4 +53,4 @@ Currently, the App does not offer an option to delete your account via the App i
 
 For any privacy-related concerns, you can contact us at:
 
-**Email**: [bounces+44247537@clkmail.activeaces.com](mailto:bounces+44247537@clkmail.activeaces.com)
+**Contact Us**: [team@activeaces.com](mailto:team@activeaces.com)
