--- a/apps/nextjs/src/app/privacy-policy/page.mdx
+++ b/apps/nextjs/src/app/privacy-policy/page.mdx
@@ -1,13 +1,13 @@
-import { ArticleLayout } from '../../components/ArticleLayout'
+import { ArticleLayout } from "../../components/ArticleLayout";
 
 export const article = {
-  author: 'Adam Wathan',
-  date: '2024-05-02',
-  title: 'Privacy Policy for ActiveAces',
-  description: 'The privacy policy for active aces',
-}
+  author: "Adam Wathan",
+  date: "2024-05-02",
+  title: "Privacy Policy for ActiveAces",
+  description: "The privacy policy for active aces",
+};
 
-export default (props) => <ArticleLayout article={article} {...props} />
+export default (props) => <ArticleLayout article={article} {...props} />;
 
 ### Introduction
 
