feat: added privacy policy to home page and updating privacy policy

--- a/apps/nextjs/src/app/privacy-policy/page.mdx
+++ b/apps/nextjs/src/app/privacy-policy/page.mdx
@@ -21,6 +21,7 @@ When you use the App, we collect the following types of information:
 
 - **Personal Information**: This includes your name and email address, which are required for creating an account and logging into the App.
 - **Workout Data**: This includes the number of sets completed, the number of reps, and the weight used during your workouts.
+- **Google Account Information**: When you log in using your Google account, we collect your Google ID, email address, and profile information including your name and profile photo. We use this data to personalize your experience, greeting you by name and displaying your profile photo in the App.
 
 ### How We Use Your Information
 
@@ -28,6 +29,7 @@ We use the information collected for the following purposes:
 
 - To allow you to create an account and log into the App.
 - To enable you to view your workout data and track your progress.
+- To personalize your app experience by using your name and profile photo from your Apple/Google account.
 
 ### Data Sharing
 
